fix card image alignment

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -605,6 +605,7 @@ ul.row {
     width: 100%;
     object-fit: cover;
     bottom: 0;
+    position: absolute;
 }
 .card-work .card-inner {
     position: absolute;
